@@ -1,3 +1,15 @@
+2008-04-01  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Oliver Hunt.
+        
+        Changed Machine::dumpRegisters to take a pointer instead of a reference,
+        so gdb understands how to call it.
+
+        * VM/Machine.cpp:
+        (KJS::Machine::dumpRegisters):
+        (KJS::Machine::privateExecute):
+        * VM/Machine.h:
+
 2008-03-31  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
         Reviewed by Maciej.
